# nerfturret

./: FinalReport.docx  README.md  ~$nalReport.docx
cad/: Assembly.FCStd  Assembly.FCStd1  base.FCStd  base.FCStd1  basegear.FCStd  basegear.FCStd1  bearing.FCStd  bearing.FCStd1  co2dispenser.FCStd  co2dispenser.FCStd1  motor.FCStd  motor.FCStd1  motormount.FCStd  motormount.FCStd1  turret-norail.FCStd  turret-norail.FCStd1  turret-parametric.FCStd  turret-parametric.FCStd1  turret.FCStd  turret.FCStd1
cad/motor/: Assembly.FCStd  Assembly.FCStd1  base.FCStd  base.FCStd1  motor.FCStd1  nerfdart.FCStd  nerfdart.FCStd1
cad/stl/: base-Body.stl  co2dispenser-Holder.stl  turret-barrelcam.stl  turret-basebase_plate.stl  turret-motormount.stl  turret-norail-cam.stl  turret-norail-clipholder.stl  turret-norail-slide.stl  turret-parametric-attachment.stl  turret-parametric-barrelcam.stl  turret-parametric-motormount.stl  turret-parametric-slide.stl  turret-parametric-slidelock.stl  turret-slidelock.stl  turret-sliderail.stl  turret-turretbase_gear.3mf  turret-turretbase_gear.stl  turret-turretbase_plate.3mf  turret-turretbase_plate.stl  turret-turretco2_holder.3mf  turret-turretco2_holder.stl  turret-turretco2_push_cam.stl  turret-turretholder - Copy.stl  turret-turretholder.3mf  turret-turretholder.stl  turret-turretmotor_pin_mount - Copy.stl  turret-turretmotor_pin_mount.3mf  turret-turretmotor_pin_mount.stl  turret-turretmount_pin - Copy (3).stl  turret-turretmount_pin.stl  (+12 more)
code/station/: Cargo.toml
code/station/src/: main.rs  scanner.rs
models/: Nerf Dart.f3d
(+6 files in other folders)
