[package]
name = "station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
default-net = "0.14.1"
flume = "0.10.14"
ipnet = "2.7.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["full"] }
